# Task4

VirusWar/VirusWar/: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  View.h  VirusWar.cpp  VirusWar.h
